--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -110,7 +110,7 @@
     }
   }
 
-  @media (max-width: 400px) {
+  @media (max-width: 415px) {
     #homepage-img {
       width: 75vw;
       height: auto;
